Physically moved DBTree to its own package, and did minimal cleanup to make it compile.
The next step will be to get rid of all the ties from the DBTree package to the rest of the (non-core) Architect API so the DBTree becomes a reusable component.