@@ -28,6 +28,8 @@ import java.awt.event.FocusEvent;
 import java.sql.DatabaseMetaData;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -45,9 +47,13 @@ import javax.swing.JTextField;
 import javax.swing.SpinnerNumberModel;
 import javax.swing.SwingUtilities;
 import javax.swing.UIManager;
+import javax.swing.event.AncestorEvent;
+import javax.swing.event.AncestorListener;
 import javax.swing.event.ChangeEvent;
+import javax.swing.event.ChangeListener;
 import javax.swing.event.DocumentEvent;
 import javax.swing.event.DocumentListener;
+import javax.swing.text.JTextComponent;
 
 import org.apache.log4j.Logger;
 
@@ -72,7 +78,7 @@ import com.jgoodies.forms.layout.RowSpec;
  * of one or more columns. The user interface is slightly different in multi-column
  * edit mode.
  */
-public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataEntryPanel {
+public class ColumnEditPanel implements ActionListener, DataEntryPanel {
 
     private static final Logger logger = Logger.getLogger(ColumnEditPanel.class);
 
@@ -81,7 +87,7 @@ public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataE
     /**
      * The column we're editing.
      */
-    private final SQLColumn column;
+    private final Collection<SQLColumn> columns;
     
     private final JPanel panel;
 
@@ -115,6 +121,10 @@ public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataE
 
     private final JCheckBox colAutoInc;
 
+    /**
+     * Text field for the name of the sequence that will generate this column's
+     * default values. In multi-edit mode, this component will be null. 
+     */
     private final JTextField colAutoIncSequenceName;
 
     /**
@@ -135,7 +145,12 @@ public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataE
 
     private final ArchitectSession session;
 
+    
     public ColumnEditPanel(SQLColumn col, ArchitectSwingSession session) throws ArchitectException {
+        this(Collections.singleton(col), session);
+    }
+    
+    public ColumnEditPanel(Collection<SQLColumn> cols, ArchitectSwingSession session) throws ArchitectException {
         logger.debug("ColumnEditPanel called"); //$NON-NLS-1$
 
         if (session == null) {
@@ -143,96 +158,118 @@ public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataE
         }
         this.session = session;
         
-        if (col == null) {
-            throw new NullPointerException("Edit null column is not allowed"); //$NON-NLS-1$
+        if (cols == null || cols.isEmpty()) {
+            throw new NullPointerException("Null or empty collection of columns is not allowed"); //$NON-NLS-1$
         }
-        this.column = col;
+        columns = new ArrayList<SQLColumn>(cols);
         
         FormLayout layout = new FormLayout(
-                "pref:grow, 4dlu, pref:grow",
+                "pref, pref:grow, 4dlu, pref, pref:grow",
                 "");
-        layout.setColumnGroups(new int[][] { { 1, 3 } } );
+        layout.setColumnGroups(new int[][] { { 2, 5 } } );
         panel = new JPanel(layout);
         CellConstraints cc = new CellConstraints();
         
+        JCheckBox cb;
         int row = 1;
         layout.appendRow(new RowSpec("p"));
-        panel.add(makeTitle(Messages.getString("ColumnEditPanel.source")), cc.xyw(1, row++, 3)); //$NON-NLS-1$
+        panel.add(makeTitle(Messages.getString("ColumnEditPanel.source")), cc.xyw(2, row++, 4)); //$NON-NLS-1$
         layout.appendRow(new RowSpec("p"));
-        panel.add(sourceLabel = new JLabel(), cc.xyw(1, row++, 3));
+        panel.add(sourceLabel = new JLabel(), cc.xyw(2, row++, 4));
 
-        layout.appendRow(new RowSpec("4dlu"));
+        layout.appendRow(new RowSpec("5dlu"));
         row++;
         
         layout.appendRow(new RowSpec("p"));
-        panel.add(makeTitle(Messages.getString("ColumnEditPanel.name")), cc.xyw(1, row++, 3)); //$NON-NLS-1$
+        panel.add(makeTitle(Messages.getString("ColumnEditPanel.name")), cc.xyw(2, row++, 4)); //$NON-NLS-1$
         layout.appendRow(new RowSpec("p"));
-        panel.add(colName = new JTextField(), cc.xyw(1, row++, 3));
+        panel.add(cb = new JCheckBox(), cc.xy(1, row));
+        panel.add(colName = new JTextField(), cc.xyw(2, row++, 4));
+        componentEnabledMap.put(colName, cb);
+        colName.getDocument().addDocumentListener(new DocumentCheckboxEnabler(cb));
 
-        layout.appendRow(new RowSpec("4dlu"));
+        layout.appendRow(new RowSpec("5dlu"));
         row++;
 
         layout.appendRow(new RowSpec("p"));
-        panel.add(makeTitle(Messages.getString("ColumnEditPanel.type")), cc.xyw(1, row++, 3)); //$NON-NLS-1$
+        panel.add(makeTitle(Messages.getString("ColumnEditPanel.type")), cc.xyw(2, row++, 4)); //$NON-NLS-1$
         layout.appendRow(new RowSpec("p"));
-        panel.add(colType = createColTypeEditor(), cc.xyw(1, row++, 3));
+        panel.add(cb = new JCheckBox(), cc.xy(1, row));
+        panel.add(colType = new JComboBox(SQLType.getTypes()), cc.xyw(2, row++, 4));
+        componentEnabledMap.put(colType, cb);
+        colType.setSelectedItem(null);
         colType.addActionListener(this);
 
-        layout.appendRow(new RowSpec("4dlu"));
+        layout.appendRow(new RowSpec("5dlu"));
         row++;
 
         layout.appendRow(new RowSpec("p"));
-        panel.add(makeTitle(Messages.getString("ColumnEditPanel.precision")), cc.xy(1, row)); //$NON-NLS-1$
-        panel.add(makeTitle(Messages.getString("ColumnEditPanel.scale")), cc.xy(3, row++)); //$NON-NLS-1$
+        panel.add(makeTitle(Messages.getString("ColumnEditPanel.precision")), cc.xy(2, row)); //$NON-NLS-1$
+        panel.add(makeTitle(Messages.getString("ColumnEditPanel.scale")), cc.xy(5, row++)); //$NON-NLS-1$
 
         layout.appendRow(new RowSpec("p"));
-        panel.add(colPrec = createPrecisionEditor(), cc.xy(1, row));
-        panel.add(colScale = createScaleEditor(), cc.xy(3, row++));
-
-        layout.appendRow(new RowSpec("4dlu"));
+        panel.add(cb = new JCheckBox(), cc.xy(1, row));
+        panel.add(colPrec = createPrecisionEditor(), cc.xy(2, row));
+        componentEnabledMap.put(colPrec, cb);
+        colPrec.addChangeListener(checkboxEnabler);
+        
+        panel.add(cb = new JCheckBox(), cc.xy(4, row));
+        panel.add(colScale = createScaleEditor(), cc.xy(5, row++));
+        componentEnabledMap.put(colScale, cb);
+        colScale.addChangeListener(checkboxEnabler);
+        
+        layout.appendRow(new RowSpec("5dlu"));
         row++;
 
         layout.appendRow(new RowSpec("p"));
-        panel.add(colInPK = new JCheckBox(Messages.getString("ColumnEditPanel.inPrimaryKey")), cc.xyw(1, row++, 3)); //$NON-NLS-1$
+        panel.add(cb = new JCheckBox(), cc.xy(1, row));
+        panel.add(colInPK = new JCheckBox(Messages.getString("ColumnEditPanel.inPrimaryKey")), cc.xyw(2, row++, 4)); //$NON-NLS-1$
+        componentEnabledMap.put(colInPK, cb);
         colInPK.addActionListener(this);
-
-        layout.appendRow(new RowSpec("2dlu"));
+        colInPK.addActionListener(checkboxEnabler);
+        
+        layout.appendRow(new RowSpec("3dlu"));
         row++;
 
         layout.appendRow(new RowSpec("p"));
-        panel.add(colNullable = new JCheckBox(Messages.getString("ColumnEditPanel.allowsNulls")), cc.xyw(1, row++, 3)); //$NON-NLS-1$
+        panel.add(cb = new JCheckBox(), cc.xy(1, row));
+        panel.add(colNullable = new JCheckBox(Messages.getString("ColumnEditPanel.allowsNulls")), cc.xyw(2, row++, 4)); //$NON-NLS-1$
+        componentEnabledMap.put(colNullable, cb);
         colNullable.addActionListener(this);
+        colNullable.addActionListener(checkboxEnabler);
 
-        layout.appendRow(new RowSpec("2dlu"));
+        layout.appendRow(new RowSpec("3dlu"));
         row++;
 
         layout.appendRow(new RowSpec("p"));
-        panel.add(colAutoInc = new JCheckBox(Messages.getString("ColumnEditPanel.autoIncrement")), cc.xyw(1, row++, 3)); //$NON-NLS-1$
+        panel.add(cb = new JCheckBox(), cc.xy(1, row));
+        panel.add(colAutoInc = new JCheckBox(Messages.getString("ColumnEditPanel.autoIncrement")), cc.xyw(2, row++, 4)); //$NON-NLS-1$
+        componentEnabledMap.put(colAutoInc, cb);
         colAutoInc.addActionListener(this);
+        colAutoInc.addActionListener(checkboxEnabler);
 
-        layout.appendRow(new RowSpec("4dlu"));
+        layout.appendRow(new RowSpec("6dlu"));
         row++;
 
         layout.appendRow(new RowSpec("p"));
-        panel.add(makeTitle(Messages.getString("ColumnEditPanel.sequenceName")), cc.xyw(1, row++, 3)); //$NON-NLS-1$
+        panel.add(makeTitle(Messages.getString("ColumnEditPanel.sequenceName")), cc.xyw(2, row++, 4)); //$NON-NLS-1$
         layout.appendRow(new RowSpec("p"));
-        panel.add(colAutoIncSequenceName = new JTextField(), cc.xyw(1, row++, 3));
-
+        panel.add(cb = new JCheckBox(), cc.xy(1, row));
+        panel.add(colAutoIncSequenceName = new JTextField(), cc.xyw(2, row++, 4));
+        componentEnabledMap.put(colAutoIncSequenceName, cb);
+        colAutoIncSequenceName.getDocument().addDocumentListener(new DocumentCheckboxEnabler(cb));
+        
         // Listener to update the sequence name when the column name changes
         colName.getDocument().addDocumentListener(new DocumentListener() {
             public void changedUpdate(DocumentEvent e) {
-                doSync();
+                syncSequenceName();
             }
 
             public void insertUpdate(DocumentEvent e) {
-                doSync();
+                syncSequenceName();
             }
 
             public void removeUpdate(DocumentEvent e) {
-                doSync();
-            }
-
-            private void doSync() {
                 syncSequenceName();
             }
         });
@@ -243,7 +280,10 @@ public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataE
         colAutoIncSequenceName.addFocusListener(new FocusAdapter() {
             @Override
             public void focusLost(FocusEvent e) {
-                if (colAutoIncSequenceName.getText().trim().equals("")) { //$NON-NLS-1$
+                if (columns.size() == 1 && colAutoIncSequenceName.getText().trim().equals("")) { //$NON-NLS-1$
+                    // Changing sequence name doesn't make sense in multi-edit
+                    // because sequence names have to be unique
+                    SQLColumn column = columns.iterator().next();
                     colAutoIncSequenceName.setText(column.getAutoIncrementSequenceName());
                     discoverSequenceNamePattern(column.getName());
                     syncSequenceName();
@@ -253,27 +293,50 @@ public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataE
             }
         });
 
-        layout.appendRow(new RowSpec("4dlu"));
+        layout.appendRow(new RowSpec("5dlu"));
         row++;
 
         layout.appendRow(new RowSpec("p"));
-        panel.add(makeTitle(Messages.getString("ColumnEditPanel.remarks")), cc.xyw(1, row++, 3)); //$NON-NLS-1$
-        layout.appendRow(new RowSpec("fill:pref:grow"));
-        panel.add(new JScrollPane(colRemarks = new JTextArea()), cc.xyw(1, row++, 3)); // TODO grow vertically
+        panel.add(makeTitle(Messages.getString("ColumnEditPanel.remarks")), cc.xyw(2, row++, 4)); //$NON-NLS-1$
+        layout.appendRow(new RowSpec("pref:grow"));
+        panel.add(cb = new JCheckBox(), cc.xy(1, row, "center, top"));
+        panel.add(new JScrollPane(colRemarks = new JTextArea()), cc.xyw(2, row++, 4, "fill, fill"));
+        componentEnabledMap.put(colRemarks, cb);
+        colRemarks.getDocument().addDocumentListener(new DocumentCheckboxEnabler(cb));
         colRemarks.setRows(5);
         colRemarks.setLineWrap(true);
         colRemarks.setWrapStyleWord(true);
 
-        layout.appendRow(new RowSpec("4dlu"));
+        layout.appendRow(new RowSpec("5dlu"));
         row++;
 
         layout.appendRow(new RowSpec("p"));
-        panel.add(makeTitle(Messages.getString("ColumnEditPanel.defaultValue")), cc.xyw(1, row++, 3)); //$NON-NLS-1$
+        panel.add(makeTitle(Messages.getString("ColumnEditPanel.defaultValue")), cc.xyw(2, row++, 4)); //$NON-NLS-1$
         layout.appendRow(new RowSpec("p"));
-        panel.add(colDefaultValue = new JTextField(), cc.xyw(1, row++, 3));
+        panel.add(cb = new JCheckBox(), cc.xy(1, row));
+        panel.add(colDefaultValue = new JTextField(), cc.xyw(2, row++, 4));
+        colDefaultValue.getDocument().addDocumentListener(new DocumentCheckboxEnabler(cb));
+        componentEnabledMap.put(colDefaultValue, cb);
         colDefaultValue.addActionListener(this);
 
-        editColumn(col);
+        // start with all components enabled; if there are multiple columns
+        // to edit, these checkboxes will be turned off selectively for the
+        // mismatching values
+        for (JCheckBox checkbox : componentEnabledMap.values()) {
+            checkbox.setSelected(true);
+        }
+        
+        for (SQLColumn col : cols) {
+            logger.debug("Updating component state for column " + col);
+            updateComponents(col);
+        }
+
+//         TODO only give focus to column name if it's enabled?
+        colName.requestFocus();
+        colName.selectAll();
+        
+        ArchitectUtils.listenToHierarchy(obsolesenceListener, session.getRootObject());
+        panel.addAncestorListener(cleanupListener);
     }
 
     private Component makeTitle(String string) {
@@ -291,11 +354,8 @@ public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataE
                                     // size
     }
 
-    private JComboBox createColTypeEditor() {
-        return new JComboBox(SQLType.getTypes());
-    }
-
     /**
+     * TODO update docs to reflect current usage!
      * Updates all the UI components to reflect the given column's properties.
      * <p>
      * This is just a constructor subroutine which is only called one time per
@@ -305,7 +365,7 @@ public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataE
      * @param col
      *            The column to edit
      */
-    private void editColumn(SQLColumn col) throws ArchitectException {
+    private void updateComponents(SQLColumn col) throws ArchitectException {
         SQLColumn sourceColumn = col.getSourceColumn();
         if (sourceColumn == null) {
             sourceLabel.setText(Messages.getString("ColumnEditPanel.noneSpecified")); //$NON-NLS-1$
@@ -315,23 +375,60 @@ public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataE
                     DDLUtils.toQualifiedName(
                             sourceColumn.getParentTable()) + "." + sourceColumn.getName());
         }
-        colName.setText(col.getName());
-        colType.setSelectedItem(SQLType.getType(col.getType()));
-        colScale.setValue(new Integer(col.getScale()));
-        colPrec.setValue(new Integer(col.getPrecision()));
+        
+        updateComponent(colName, col.getName());
+        updateComponent(colType, SQLType.getType(col.getType()));
+        
+        updateComponent(colScale, Integer.valueOf(col.getScale()));
+        updateComponent(colPrec, Integer.valueOf(col.getPrecision()));
+        
+        // TODO handle checkboxes
         colNullable.setSelected(col.getNullable() == DatabaseMetaData.columnNullable);
-        colRemarks.setText(col.getRemarks());
-        colDefaultValue.setText(col.getDefaultValue());
+        
+        updateComponent(colRemarks, col.getRemarks());
+        updateComponent(colDefaultValue, col.getDefaultValue());
+        
+        // TODO handle checkboxes
         colInPK.setSelected(col.getPrimaryKeySeq() != null);
         colAutoInc.setSelected(col.isAutoIncrement());
-        colAutoIncSequenceName.setText(col.getAutoIncrementSequenceName());
+
+        updateComponent(colAutoIncSequenceName, col.getAutoIncrementSequenceName());
         updateComponents();
         discoverSequenceNamePattern(col.getName());
-        colName.requestFocus();
-        colName.selectAll();
-        ArchitectUtils.listenToHierarchy(this, session.getRootObject());
     }
 
+    /** Subroutine of {@link #updateComponents(SQLColumn)}. */
+    private void updateComponent(JTextComponent comp, String expectedValue) {
+        if (componentEnabledMap.get(comp).isSelected() && (comp.getText().equals("") || comp.getText().equals(expectedValue))) {
+            comp.setText(expectedValue);
+        } else {
+            comp.setText("");
+            componentEnabledMap.get(comp).setSelected(false);
+        }
+    }
+    
+    /** Subroutine of {@link #updateComponents(SQLColumn)}. */
+    private void updateComponent(JComboBox comp, Object expectedValue) {
+        if (componentEnabledMap.get(comp).isSelected() &&
+                (comp.getSelectedItem() == null || comp.getSelectedItem().equals(expectedValue))) {
+            comp.setSelectedItem(expectedValue);
+        } else {
+            comp.setSelectedItem(null);
+            componentEnabledMap.get(comp).setSelected(false);
+        }
+    }
+    
+    /** Subroutine of {@link #updateComponents(SQLColumn)}. */
+    private void updateComponent(JSpinner comp, Integer expectedValue) {
+        if (componentEnabledMap.get(comp).isSelected() &&
+                (comp.getValue().equals(Integer.valueOf(0)) || comp.getValue().equals(expectedValue))) {
+            comp.setValue(expectedValue);
+        } else {
+            comp.setValue(Integer.valueOf(0));
+            componentEnabledMap.get(comp).setSelected(false);
+        }
+    }
+    
     /**
      * Figures out what the sequence name prefix and suffix strings are, based
      * on the current contents of the sequence name and column name fields.
@@ -372,13 +469,6 @@ public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataE
     }
 
     /**
-     * Implementation of ChangeListener.
-     */
-    public void stateChanged(ChangeEvent e) {
-        logger.debug("State change event " + e); //$NON-NLS-1$
-    }
-
-    /**
      * Examines the components and makes sure they're in a consistent state
      * (they are legal with respect to the model).
      */
@@ -414,42 +504,76 @@ public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataE
     }
 
     /**
-     * Sets the properties of the current column in the model to match those on
-     * screen.
+     * Sets the properties of each column being edited to match those on screen. Only
+     * components with their associated checkbox selected will be considered.
      * 
      * @return A list of error messages if the update was not successful.
      */
     private List<String> updateModel() {
         logger.debug("Updating model"); //$NON-NLS-1$
         List<String> errors = new ArrayList<String>();
+        SQLObject compoundEditRoot = ArchitectUtils.findCommonAncestor(columns);
+        logger.debug("Compound edit root is " + compoundEditRoot);
         try {
-            column.startCompoundEdit(Messages.getString("ColumnEditPanel.compoundEditName")); //$NON-NLS-1$
-            if (colName.getText().trim().length() == 0) {
-                errors.add(Messages.getString("ColumnEditPanel.columnNameRequired")); //$NON-NLS-1$
-            } else {
-                column.setName(colName.getText());
+            compoundEditRoot.startCompoundEdit(Messages.getString("ColumnEditPanel.compoundEditName")); //$NON-NLS-1$
+            
+            for (SQLColumn column : columns) {
+                if (componentEnabledMap.get(colName).isSelected()) {
+                    if (colName.getText().trim().length() == 0) {
+                        errors.add(Messages.getString("ColumnEditPanel.columnNameRequired")); //$NON-NLS-1$
+                    } else {
+                        column.setName(colName.getText());
+                    }
+                }
+                
+                if (componentEnabledMap.get(colType).isSelected()) {
+                    column.setType(((SQLType) colType.getSelectedItem()).getType());
+                }
+                
+                if (componentEnabledMap.get(colScale).isSelected()) {
+                    column.setScale(((Integer) colScale.getValue()).intValue());
+                }
+                
+                if (componentEnabledMap.get(colPrec).isSelected()) {
+                    column.setPrecision(((Integer) colPrec.getValue()).intValue());
+                }
+                
+                if (componentEnabledMap.get(colNullable).isSelected()) {
+                    column.setNullable(colNullable.isSelected() ? DatabaseMetaData.columnNullable
+                            : DatabaseMetaData.columnNoNulls);
+                }
+                
+                if (componentEnabledMap.get(colRemarks).isSelected()) {
+                    column.setRemarks(colRemarks.getText());
+                }
+
+                if (componentEnabledMap.get(colDefaultValue).isSelected()) {
+                    // avoid setting default value to empty string
+                    if (!(column.getDefaultValue() == null && colDefaultValue.getText().equals(""))) { //$NON-NLS-1$
+                        column.setDefaultValue(colDefaultValue.getText());
+                    }
+                }
+                
+                // Autoincrement has to go before the primary key or
+                // this column will never allow nulls
+                if (componentEnabledMap.get(colAutoInc).isSelected()) {
+                    column.setAutoIncrement(colAutoInc.isSelected());
+                }
+                
+                if (componentEnabledMap.get(colInPK).isSelected()) {
+                    if (column.getPrimaryKeySeq() == null) {
+                        column.setPrimaryKeySeq(colInPK.isSelected() ? new Integer(column.getParentTable().getPkSize()) : null);
+                    } else {
+                        column.setPrimaryKeySeq(colInPK.isSelected() ? new Integer(column.getPrimaryKeySeq()) : null);
+                    }
+                }
+                
+                if (componentEnabledMap.get(colAutoIncSequenceName).isSelected()) {
+                    column.setAutoIncrementSequenceName(colAutoIncSequenceName.getText());
+                }
             }
-            column.setType(((SQLType) colType.getSelectedItem()).getType());
-            column.setScale(((Integer) colScale.getValue()).intValue());
-            column.setPrecision(((Integer) colPrec.getValue()).intValue());
-            column.setNullable(colNullable.isSelected() ? DatabaseMetaData.columnNullable
-                    : DatabaseMetaData.columnNoNulls);
-            column.setRemarks(colRemarks.getText());
-            if (!(column.getDefaultValue() == null && colDefaultValue.getText().equals(""))) //$NON-NLS-1$
-            {
-                column.setDefaultValue(colDefaultValue.getText());
-            }
-            // Autoincrement has to go before the primary key or
-            // this column will never allow nulls
-            column.setAutoIncrement(colAutoInc.isSelected());
-            if (column.getPrimaryKeySeq() == null) {
-                column.setPrimaryKeySeq(colInPK.isSelected() ? new Integer(column.getParentTable().getPkSize()) : null);
-            } else {
-                column.setPrimaryKeySeq(colInPK.isSelected() ? new Integer(column.getPrimaryKeySeq()) : null);
-            }
-            column.setAutoIncrementSequenceName(colAutoIncSequenceName.getText());
         } finally {
-            column.endCompoundEdit(Messages.getString("ColumnEditPanel.compoundEditName")); //$NON-NLS-1$
+            compoundEditRoot.endCompoundEdit(Messages.getString("ColumnEditPanel.compoundEditName")); //$NON-NLS-1$
         }
         return errors;
     }
@@ -461,11 +585,6 @@ public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataE
      * enter on a text field.
      */
     public boolean applyChanges() {
-        try {
-            ArchitectUtils.unlistenToHierarchy(this, session.getRootObject());
-        } catch (ArchitectException e) {
-            throw new ArchitectRuntimeException(e);
-        }
         List<String> errors = updateModel();
         if (!errors.isEmpty()) {
             JOptionPane.showMessageDialog(panel, errors.toString());
@@ -479,11 +598,7 @@ public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataE
      * Does nothing. The column's properties will not have been modified.
      */
     public void discardChanges() {
-        try {
-            ArchitectUtils.unlistenToHierarchy(this, session.getRootObject());
-        } catch (ArchitectException e) {
-            throw new ArchitectRuntimeException(e);
-        }
+        // nothing to do
     }
 
     /* docs inherit from interface */
@@ -546,37 +661,102 @@ public class ColumnEditPanel implements SQLObjectListener, ActionListener, DataE
         return true;
     }
 
-    public void dbChildrenInserted(SQLObjectEvent e) {
-        logger.debug("SQLObject children got inserted: " + e); //$NON-NLS-1$
-    }
-
     /**
-     * Checks to see if its respective column or enclosing table is removed from
-     * playpen. If yes, exit the editing dialog window.
+     * The one instance of {@link CheckboxEnabler} that handles events from all
+     * components in this panel.
      */
-    public void dbChildrenRemoved(SQLObjectEvent e) {
-        logger.debug("SQLObject children got removed: " + e); //$NON-NLS-1$
-        List<SQLObject> removedChildren = Arrays.asList(e.getChildren());
+    private final CheckboxEnabler checkboxEnabler = new CheckboxEnabler();
+    
+    /**
+     * A simple listener that enables the checkbox associated with a component
+     * whenever that component is manipulated by the user.
+     */
+    private class CheckboxEnabler implements ActionListener, ChangeListener {
 
-        if (removedChildren.contains(column) || removedChildren.contains(column.getParentTable())) {
-            try {
-                ArchitectUtils.unlistenToHierarchy(this, session.getRootObject());
-                Window parentWindow = SwingUtilities.getWindowAncestor(panel);
-                if (parentWindow != null) {
-                    parentWindow.dispose();
-                }
-            } catch (ArchitectException ex) {
-                throw new ArchitectRuntimeException(ex);
+        public void actionPerformed(ActionEvent e) { enable((JComponent) e.getSource()); }
+
+        public void stateChanged(ChangeEvent e) { enable((JComponent) e.getSource()); }
+        
+        private void enable(JComponent c) {
+            JCheckBox checkBox = componentEnabledMap.get(c);
+            if (checkBox != null) {
+                checkBox.setSelected(true);
             }
         }
     }
+    
+    /**
+     * Simple listener that enables the checkbox associated with a single
+     * text component whenever its document changes. Instances of this listener
+     * can't be shared among components; you need one instance per component.
+     */
+    private class DocumentCheckboxEnabler implements DocumentListener {
+        
+        private final JCheckBox checkBox;
 
-    public void dbObjectChanged(SQLObjectEvent e) {
-
+        public DocumentCheckboxEnabler(JCheckBox checkBox) {
+            this.checkBox = checkBox;
+        }
+        
+        public void changedUpdate(DocumentEvent e) { checkBox.setSelected(true); }
+        public void insertUpdate(DocumentEvent e) { checkBox.setSelected(true); }
+        public void removeUpdate(DocumentEvent e) { checkBox.setSelected(true); }
     }
+    
+    /**
+     * Listens for SQLObject removals in the model that would make this
+     * column editor obsolete (because it refers to properties of a 
+     * column that is no longer in the model). When this editor is deemed
+     * obsolete, it looks for its nearest Window ancestor and disposes it.
+     */
+    private final SQLObjectListener obsolesenceListener = new SQLObjectListener() {
+        public void dbChildrenInserted(SQLObjectEvent e) {
+            logger.debug("SQLObject children got inserted: " + e); //$NON-NLS-1$
+        }
 
-    public void dbStructureChanged(SQLObjectEvent e) {
+        /**
+         * Checks to see if any of the columns being edited was just removed from
+         * the playpen. If yes, disposes the enclosing window.
+         */
+        public void dbChildrenRemoved(SQLObjectEvent e) {
+            logger.debug("SQLObject children got removed: " + e); //$NON-NLS-1$
+            List<SQLObject> removedChildren = Arrays.asList(e.getChildren());
 
-    }
+            for (SQLColumn column : columns) {
+                if (removedChildren.contains(column) || removedChildren.contains(column.getParentTable())) {
+                    Window parentWindow = SwingUtilities.getWindowAncestor(panel);
+                    if (parentWindow != null) {
+                        parentWindow.dispose();
+                    }
+                }
+            }
+        }
 
+        public void dbObjectChanged(SQLObjectEvent e) {
+
+        }
+
+        public void dbStructureChanged(SQLObjectEvent e) {
+
+        }
+    };
+ 
+    /**
+     * Watches for this component becoming invisible and then unregisters it as a
+     * listener on all the objects it has been listening to.
+     */
+    private final AncestorListener cleanupListener = new AncestorListener() {
+
+        public void ancestorAdded(AncestorEvent event) { /* don't care */ }
+
+        public void ancestorMoved(AncestorEvent event) { /* don't care */ }
+
+        public void ancestorRemoved(AncestorEvent event) {
+            try {
+                ArchitectUtils.unlistenToHierarchy(obsolesenceListener, session.getRootObject());
+            } catch (ArchitectException e) {
+                throw new ArchitectRuntimeException(e);
+            }
+        }
+    };
 }
